<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalc" >

    <SeekBar
        android:id="@+id/changeTipSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:progress="15" />
    
    <EditText
        android:id="@+id/finalBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/finalTextView"
        android:layout_alignLeft="@+id/finalTipEditText"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/final_bill_edit_text"
        android:textSize="22sp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:gravity="right" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_alignLeft="@+id/tipEditText"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/bill_edit_text"
        android:textSize="22sp"
        android:gravity="right" />

    <EditText
        android:id="@+id/finalTipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/finalTipTextView"
        android:layout_alignLeft="@+id/tipEditText"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/final_tip_edit_text"
        android:textSize="22sp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:gravity="right" />

    <EditText
        android:id="@+id/tipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipTextView"
        android:layout_alignBottom="@+id/tipTextView"
        android:layout_alignRight="@+id/changeTipSeekBar"
        android:layout_marginRight="16dp"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/tip_edit_text"
        android:textSize="22sp"
        android:gravity="right" />
    
    <TextView
        android:id="@+id/billTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeTipSeekBar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/bill_text_view"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/finalTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalBillTextView"
        android:layout_below="@+id/finalBillTextView"
        android:layout_marginTop="22dp"
        android:text="@string/final_tip_text_view"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/finalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalTipTextView"
        android:layout_below="@+id/finalTipTextView"
        android:layout_marginTop="18dp"
        android:text="@string/final_bill_text_view"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/billTextView"
        android:layout_below="@+id/billTextView"
        android:layout_marginTop="18dp"
        android:text="@string/tip_text_view"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/splitBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalBillTextView"
        android:layout_below="@+id/changeTipSeekBar"
        android:layout_marginTop="26dp"
        android:text="@string/split"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/splitBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/splitBillTextView"
        android:layout_alignLeft="@+id/tipEditText"
        android:ems="5"
        android:gravity="right"
        android:hint="@string/split_bill_hint"
        android:inputType="number"
        android:text="@string/split_edit_text"
        android:textSize="22sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/finalBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_below="@+id/splitBillTextView"
        android:layout_marginTop="32dp"
        android:text="@string/final_text_view"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/signoffTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/perPersonTextView"
        android:layout_alignRight="@+id/finalBillEditText"
        android:layout_marginTop="19dp"
        android:text="@string/signoff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/perPersonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalTextView"
        android:layout_below="@+id/finalTextView"
        android:layout_marginTop="18dp"
        android:text="@string/per_person"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/perPersonEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/perPersonTextView"
        android:layout_alignRight="@+id/finalBillEditText"
        android:ems="5"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:text="@string/per_person_edit_text"
        android:textSize="22sp" />

</RelativeLayout>
</ScrollView>